# nonebot-plugin-any

./: LICENSE  README.md  __init__.py  event.py  message.py  patch.py  pyproject.toml
.github/workflows/: pypi-publish.yml
adapters/: kook.py
nonebot_plugin_any/: __init__.py  event.py  message.py  models.py  patch.py
nonebot_plugin_any/adapters/: kook.py  onebot.py  qq.py  qqguild.py
nonebot_plugin_any/utils/: __init__.py
utils/: requests.py
